Update composer require command

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "rmazarei/colorcodeconverter",
-    "description": "My awesome package",
+    "description": "forked from laracon21/colorcodeconverter",
     "keywords": [
         "roohi",
         "laracon21",
